fix dark mode mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,22 @@
 #root { height: 100% }
-html,
+html {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  height: 100%;
+}
 body {
   position: relative;
   height: 100%;
   background: rgb(220, 220, 220);
-  /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000; */
+  font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
   margin: 0;
   padding: 0;
 }
-  .App {
-    text-align: center;
-    overflow: scroll;
-  }
-
-  .App-logo {
-    height: 10rem;
-    pointer-events: none;
-  }
-
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-
-  .App-header {
-    background-color: transparent;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-
-  .App-link {
-    color: #61dafb;
-  }
-
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
+.App {
+  text-align: center;
+  overflow: scroll;
+}
 
   /* General Container Styling  */
 
@@ -169,7 +137,7 @@ body {
     width: 20%;
     height: 20%;
     min-width: 60px;
-    color: black;
+    color: grey;
     background: none;
     border: none;
     outline: none;
@@ -546,15 +514,28 @@ body {
 
 
 /* Dark Mode */
+#root.dark { height: 100% }
+html.dark {
+  position: relative;
+  height: 100%;
+  background:black;
+  color: rgb(220, 220, 220);
+  font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+  margin: 0;
+  padding: 0;
+}
 body.dark {
-  background-color: black;
-  color: white;
-
+  position: relative;
+  height: 100%;
+  background:black;
+  color: rgb(220, 220, 220);
+  font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .resume-bullet-points.dark {
   margin: 0.5%;
   font-size: 20px;
-  color: white;
+  color: rgb(220, 220, 220);
 }
-
